--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>ScrollTrigger Example</title>
+  <title>Music! </title>
   <link rel="stylesheet" href="./style.css">
 </head>
   <body>
